[package]
name = "peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.23.0",features = ["macros","rt-multi-thread","net","io-util"]}
tun = { version = "0.5.4", features = ["async"] }
packet = "0.1.4"
futures = "0.3.25"
tokio-util = {version = "0.7.4",features=["codec"]}